<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:background="@drawable/dialog_background_rounded">

    <ImageView
        android:id="@+id/iconCategory"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/appCompatSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minWidth="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/iconCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconCategory"
        app:layout_constraintTop_toTopOf="@+id/iconCategory" />

    <EditText
        android:id="@+id/editTextItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_item"
        android:inputType="textCapSentences"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatSpinner"
        app:layout_constraintStart_toStartOf="@+id/iconCategory"
        app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextItem"
        app:layout_constraintStart_toStartOf="@+id/editTextItem"
        app:layout_constraintTop_toBottomOf="@+id/editTextItem"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_priority"
        app:layout_constraintStart_toStartOf="@+id/editTextAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <NumberPicker
        android:id="@+id/numberPickerPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:showDividers="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageViewReminder"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_add_alert"
        app:layout_constraintEnd_toEndOf="@+id/iconCategory"
        app:layout_constraintStart_toStartOf="@+id/iconCategory"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerPriority"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewRemember"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewReminder"
        app:layout_constraintEnd_toEndOf="@+id/appCompatSpinner"
        app:layout_constraintStart_toStartOf="@+id/appCompatSpinner"
        app:layout_constraintTop_toTopOf="@+id/imageViewReminder" />

</androidx.constraintlayout.widget.ConstraintLayout>